<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:id="@+id/email_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/email_sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_slab_bold"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="15"
            android:text="@string/login_btn_text"
            android:textColor="@color/LimeGreen"
            android:textSize="18dp"
            android:textStyle="bold" />
        
        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_acc_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_slab_bold"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="3"
            android:shadowRadius="15"
            android:text="@string/create_acc_text"
            android:textColor="#F4C03C"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>